Block section, block 3 background image on mobile size fixed

--- a/css/block-section.css
+++ b/css/block-section.css
@@ -135,8 +135,8 @@
         rgba(255, 255, 255, 0.88) 60.84%
       ),
       url("../images/block-img-3.png");
-    background-size: 752px 494px;
-    background-position: 40% 50%;
+    background-size: 835px 426px;
+    background-position: 50% 50%;
   }
 
   .break {
